--- a/templates/presentations/Haxxit-Proposal/index.jinja2
+++ b/templates/presentations/Haxxit-Proposal/index.jinja2
@@ -13,6 +13,7 @@ Haxxit is a turn-based strategy loosely based around hacking.
 {% endblock %}
 
 {% block head %}
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu&subset=Latin">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Haxxit-Proposal.css') }}">
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery-ui.js') }}"></script>
