--- a/templates/presentations/Haxxit-Proposal/index.jinja2
+++ b/templates/presentations/Haxxit-Proposal/index.jinja2
@@ -26,18 +26,43 @@ Haxxit is a turn-based strategy loosely based around hacking.
 {% block slides %}
 
     <section data-state="title">
-        <h1><span class="normal">H</span><span class="slow">a</span><span class="normal">xx<span class="delayed">i</span>t</span></h1>
-        <h2>A Turn-Based Strategy Game</h2>
-        <h3>Alexander Abbott</h3>
+        <h1 class="title"><span class="normal">H</span><span class="slow">a</span><span class="normal">xx<span class="delayed">i</span>t</span></h1>
+        <h2 class="title">A Turn-Based Strategy Game</h2>
+        <h3 class="title">Alexander Abbott</h3>
+    </section>
+    
+    <section>
+        <h1>The Precursor</h1>
+        <img src="{{ url_for('static', filename='images/Spybot.png') }}" />
+        <p>Lego's Spybot: The Nightfall Incident</p>
+    </section>
+    
+    <section>
+        <h1>Spybot's History</h1>
+        <ul>
+            <li>Created by GameLab in 2002 for Lego</li>
+            <li>Built with Macromedia Shockwave, the precursor to Flash</li>
+            <li>Advertised short-lived Lego Spybotics line in loading screens</li>
+            <li>Gameplay focused on game, not on Lego</li>
+        </ul>
     </section>
 
     <section>
-        <h1>Background</h1>
+        <h1>Spybot's Mechanics</h1>
         <ul>
-            <li>As a kid, I used to play Lego minigames</li>
-            <li>One game that I remember well is Spybot: The Nightfall Incident</li>
-            <li>Created in Macromedia Shockwave, it was never updated since it was made</li>
-            <li>Only exists on archive sites now, in the same state as when it was released</li>
+            <li class="fragment">The player is a new recruit for SMART, a police force for the internet</li>
+            <li class="fragment fade-in">Their role is to break into company servers (aka "nodes") and eliminate corrupted security software</li>
+            <li class="fragment fade-in">With each node that is hacked, the player gets a credit reward</li>
+            <li class="fragment fade-in">They can exchange these credits for new hacking programs at Warez Nodes.</li>
+            <li class="fragment fade-in">Meanwhile, enemy hackers are corrupting security software in order to take down the net</li>
+            <li class="fragment fade-in">The player is one of the last few still able to connect, and must stop these hackers</li>
+        </ul>
+    </section>
+
+    <section>
+        <h1>The Game</h1>
+        <ul>
+            
         </ul>
     </section>
 
