Game mechanics slide

--- a/templates/presentations/Haxxit-Proposal/index.jinja2
+++ b/templates/presentations/Haxxit-Proposal/index.jinja2
@@ -42,8 +42,10 @@ Haxxit is a turn-based strategy loosely based around hacking.
         <ul>
             <li>Created by GameLab in 2002 for Lego</li>
             <li>Built with Macromedia Shockwave, the precursor to Flash</li>
-            <li>Advertised short-lived Lego Spybotics line in loading screens</li>
-            <li>Gameplay focused on game, not on Lego</li>
+            <li>Advertised short-lived Lego Spybotics line only in the loading screens</li>
+            <li>Removed from website after the line was cancelled</li>
+            <li>Only exists on game archive sites now</li>
+            <li>Still requires Shockwave, which is being phased out now</li>
         </ul>
     </section>
 
@@ -61,9 +63,15 @@ Haxxit is a turn-based strategy loosely based around hacking.
 
     <section>
         <h1>The Game</h1>
+        <p>Haxxit will be a loose clone of Spybot, with improved game mechanics and new features, including:</p>
         <ul>
-            
+            <li>A loose clone of Lego's Spybot</li>
+            <li>New levels with a reworked Network grid</li>
+            <li>More extensive Undo support</li>
+            <li>AI support for enemy hackers</li>
+            <li>New maps and programs</li>
         </ul>
+        <p>Why tell you this, though, when I can show you?</p>
     </section>
 
 {% endblock %}
