--- a/templates/presentations/Haxxit-Proposal/index.jinja2
+++ b/templates/presentations/Haxxit-Proposal/index.jinja2
@@ -67,6 +67,7 @@ Haxxit is a turn-based strategy loosely based around hacking.
         <ul>
             <li>A loose clone of Lego's Spybot</li>
             <li>New levels with a reworked Network grid</li>
+            <li>Networked multiplayer support</li>
             <li>More extensive Undo support</li>
             <li>AI support for enemy hackers</li>
             <li>New maps and programs</li>
